--- a/style.css
+++ b/style.css
@@ -162,6 +162,8 @@
   font-size: 18px;
   padding-top: 5px;
   padding-bottom: 5px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .movie-detail:hover {
